finished show and search

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,6 +30,8 @@
 
  @import "components/poster.scss";
 
+ @import "components/film_browse.scss";
+
  body {
-   background-color: #345;
+   background-color: #283038;
  }
