--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -18,9 +18,13 @@ header.main-header {
   text-transform: uppercase;
 }
 
+.logo-container {
+  z-index: 3;
+}
+
 .background-gradient {
   position: absolute;
-  background: linear-gradient(rgba(51,68,85,0.8),rgba(51,68,85,0.0));
+  background: linear-gradient(rgba(#283038,0.8),rgba(#283038,0.0));
   left: 0;
   top: 0;
   opacity: 0;
