--- a/app/assets/stylesheets/components/poster.scss
+++ b/app/assets/stylesheets/components/poster.scss
@@ -1,8 +1,25 @@
-.poster > img {
-  border: 2px #ccc;
+.poster {
+  width: 100%;
   border-radius: 5px;
+  
+  background-size: 100%;
 }
 
-.poster-large > img {
+.poster-large {
+  border: 2px solid grey;
   width: 230px;
+  height: 333px;
+}
+
+.poster-medium {
+  border: 1px solid grey;
+  width: 120px;
+  height: 174px;
+}
+
+div.poster.hoverable:hover {
+  -webkit-box-shadow:inset 0px 0px 0px 2px #7e9;
+  -moz-box-shadow:inset 0px 0px 0px 2px #7e9;
+  box-shadow:inset 0px 0px 0px 2px #7e9;
+  transition: box-shadow 0.2s;
 }
