--- a/app/assets/stylesheets/components/signup_modal.scss
+++ b/app/assets/stylesheets/components/signup_modal.scss
@@ -4,14 +4,14 @@
   left: 0;
   height: 100vh;
   width: 100vw;
-  background-color: #14181c;
-  opacity: 0.6;
+  background-color: rgba(#14181c, 0.6);
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .signup-form-container {
+  opacity: 1;
   font-family: 'Lato', sans-serif;
   font-size: 12px;
   text-transform: none;
