--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -34,6 +34,10 @@
 
  @import "components/footer.scss";
 
+ @import "components/reviews.scss";
+
+ @import "components/rating_menu.scss";
+
  body {
    background-color: #283038;
  }
