--- a/app/assets/stylesheets/components/signup_modal.scss
+++ b/app/assets/stylesheets/components/signup_modal.scss
@@ -1,5 +1,5 @@
 .modal-background {
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   height: 100vh;
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 4;
 }
 
 .signup-form-container {
