--- a/app/assets/stylesheets/components/rating_menu.scss
+++ b/app/assets/stylesheets/components/rating_menu.scss
@@ -107,6 +107,10 @@ div.rating-button.rated > div.visible-rating {
   text-align: center;
 }
 
+.list-data-toggler {
+  text-align: center;
+}
+
 .review-button-container > p {
   margin: 0 auto;
 }
