--- a/app/assets/stylesheets/components/signup_modal.scss
+++ b/app/assets/stylesheets/components/signup_modal.scss
@@ -1,3 +1,12 @@
+$dark-grey: #283038;
+$shale-blue:#578;
+$font-white: #ccc;
+$lighter-grey: #345;
+$rating-menu-grey: #456;
+$sans-serif: 'Lato', sans-serif;
+$serif: 'Merriweather', serif;
+$title: 'Rubik', sans-serif;
+
 .modal-background {
   position: fixed;
   top: 0;
@@ -13,14 +22,30 @@
 
 .signup-form-container {
   opacity: 1;
-  font-family: 'Lato', sans-serif;
-  font-size: 12px;
+  font-family: $sans-serif;
+  font-size: 18px;
+  font-weight: bold;
   text-transform: none;
-  height: 25vh;
-  width: 25vw;
-  background: grey;
+  width: 150px;
+  background-color: $rating-menu-grey;
+  color: $font-white;
   border-radius: 5px;
   padding: 2.5vh 2.5vw; 
+  input[type=text], input[type=password], textarea {
+    margin-left: 0.3em;
+    background-color: $shale-blue;
+    margin-bottom: 1em;
+  }
+}
+
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.signup-form-container > label > p {
+  margin-bottom: 1em;
 }
 
 .signup-form-container > .exit-login-button {
