--- a/app/assets/stylesheets/components/film_display.scss
+++ b/app/assets/stylesheets/components/film_display.scss
@@ -62,7 +62,7 @@ main.film-page {
   grid-template-columns: 1fr 425px 1fr;
   grid-template-rows: auto 1fr;
   grid-gap: 20px;
-  grid-template-areas: "left-sidebar info rating-sidebar" "left-sidebar reviews reviews"
+  grid-template-areas: "left-sidebar info rating-sidebar" ". reviews reviews"
 }
 
 section.film-info {
@@ -86,6 +86,7 @@ section.reviews-container {
 }
 
 .film-left-sidebar > aside {
+  margin: 0 auto;
   position: sticky;
   top: 20px;
 }
