mostly working lists: view pages, previews with syndication

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,8 @@
 
  @import "components/profile.scss";
 
+ @import "components/create_list_modal.scss";
+
  body {
    background-color: #283038;
    min-width: 1170px;
