--- a/app/assets/stylesheets/components/rating_menu.scss
+++ b/app/assets/stylesheets/components/rating_menu.scss
@@ -107,7 +107,7 @@ div.rating-button.rated > div.visible-rating {
   text-align: center;
 }
 
-.list-data-toggler {
+.list-data-toggler, .toggle-list-presence-button {
   text-align: center;
 }
 
