--- a/app/assets/stylesheets/components/reviews.scss
+++ b/app/assets/stylesheets/components/reviews.scss
@@ -202,3 +202,25 @@ aside.poster-preview > div {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+article.user-entry > header {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 0.5em;
+  h3 {
+    margin-right: 1em;
+    color: $font-white;
+    font-family: $sans-serif;
+    font-weight: bold;
+    font-size: 20px;
+  }
+
+  p {
+    color: $font-grey;
+    font-family: $sans-serif;
+    font-size: 12px;
+    font-weight: bold;
+  }
+}
