--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -24,7 +24,7 @@ header.main-header {
 
 .background-gradient {
   position: absolute;
-  background: linear-gradient(rgba(#283038,0.8),rgba(#283038,0.0));
+  background: linear-gradient(rgba(#283038,0.6),rgba(#283038,0.0));
   left: 0;
   top: 0;
   opacity: 0;
@@ -34,6 +34,10 @@ header.main-header {
 
 a:hover, button:hover {
   color: white;
+}
+
+header.main-header > div.background-gradient.present {
+  opacity: 1;
 }
 
 header.main-header:hover .background-gradient {
