--- a/app/assets/stylesheets/components/navbar.scss
+++ b/app/assets/stylesheets/components/navbar.scss
@@ -38,7 +38,7 @@ nav.header-nav {
 .header-nav > .login-form > .error-container {
   position: absolute;
   width: 100%;
-  left: 0;
+  left: 1em;
   top: 10vh;
   height: 2em;
 }
