--- a/app/assets/stylesheets/components/signup_modal.scss
+++ b/app/assets/stylesheets/components/signup_modal.scss
@@ -21,6 +21,7 @@ $title: 'Rubik', sans-serif;
 }
 
 .signup-form-container {
+  position: relative;
   opacity: 1;
   font-family: $sans-serif;
   font-size: 18px;
@@ -48,6 +49,23 @@ $title: 'Rubik', sans-serif;
   margin-bottom: 1em;
 }
 
+.signup-form-container button {
+  margin-bottom: 0.5em;
+}
+
+.signup-form-container .error-container {
+  background-color: $shale-blue;
+  border-radius: 0.5em;
+  font-weight: normal;
+  padding: 0.1em;
+
+  li {
+    margin: 0.5em;
+  }
+}
+
 .signup-form-container > .exit-login-button {
-  float: right;
+  position: absolute;
+  top: 0.5em;
+  right: 0.5em;
 }
