slight styling adjustments

--- a/app/assets/stylesheets/components/film_browse.scss
+++ b/app/assets/stylesheets/components/film_browse.scss
@@ -17,10 +17,10 @@ $title: 'Rubik', sans-serif;
   max-width: 900px;
   p {
     font-family: $sans-serif;
-    font-size: 14px;
+    font-size: 20px;
     font-weight: bold;
     color: $font-white;
-    margin-bottom: 0.2em;
+    margin: 2em;
   }
   h1 {
     font-size: 24px;
