--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -8,12 +8,12 @@
 header.main-header {
   height: 10vh;
   width: 100%;
-  max-width: max(80vw,800px);
+  max-width: unquote("max(80vw, 800px)");
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
   color: #ccc;
   text-transform: uppercase;
 }
@@ -24,7 +24,7 @@ header.main-header {
 
 .background-gradient {
   position: absolute;
-  background: linear-gradient(rgba(#283038,0.6),rgba(#283038,0.0));
+  background: linear-gradient(rgba(#283038, 0.6), rgba(#283038, 0));
   left: 0;
   top: 0;
   opacity: 0;
@@ -32,7 +32,8 @@ header.main-header {
   height: 10vh;
 }
 
-a:hover, button:hover {
+a:hover,
+button:hover {
   color: white;
 }
 
