--- a/app/assets/stylesheets/components/header.scss
+++ b/app/assets/stylesheets/components/header.scss
@@ -8,7 +8,8 @@
 header.main-header {
   height: 10vh;
   width: 100%;
-  max-width: unquote("max(80vw, 800px)");
+  width: 80vw;
+  max-width: 800px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
